--- a/src/components/MoneyDetails/index.css
+++ b/src/components/MoneyDetails/index.css
@@ -1,51 +1,50 @@
 .moneyDetailsContainer2 {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+  width: 100%;
 }
 .balanceContainer {
-  border: 3px solid #84cc16;
+  border: 2px solid #84cc16;
   background-color: #ecfccb;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
   padding: 16px;
   border-radius: 25px;
-  width: 70%;
-  padding-left: 40px;
-  padding-right: 40px;
+  width: 30%;
+  padding-left: 16px;
+  padding-right: 16px;
   margin-top: 50px;
-  margin-right: 50px;
 }
 .IncomeContainer {
-  border: 3px solid #06b6d4;
+  border: 2px solid #06b6d4;
   background-color: #cffafe;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
   padding: 16px;
   border-radius: 25px;
-  width: 70%;
-  padding-left: 40px;
-  padding-right: 40px;
+  width: 30%;
+  padding-left: 16px;
+  padding-right: 16px;
   margin-top: 50px;
-  margin-right: 50px;
 }
 .ExpensesContainer {
-  border: 3px solid #7c3aed;
+  border: 2px solid #7c3aed;
   background-color: #ede9fe;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
   padding: 16px;
   border-radius: 25px;
-  width: 70%;
-  padding-left: 40px;
-  padding-right: 40px;
+  width: 30%;
+  padding-left: 16px;
+  padding-right: 16px;
   margin-top: 50px;
 }
 
@@ -62,13 +61,15 @@
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
+  margin-left: 20px;
 }
 .amountText {
   margin-top: -12px;
   font-weight: 500;
   font-family: 'Roboto';
+  font-size: 20px;
 }
 .balanceText {
-  font-size: 25px;
+  font-size: 23px;
   margin-top: 20px;
 }
