--- a/src/components/MoneyDetails/index.css
+++ b/src/components/MoneyDetails/index.css
@@ -19,6 +19,7 @@
   padding-right: 16px;
   margin-top: 50px;
 }
+
 .IncomeContainer {
   border: 2px solid #06b6d4;
   background-color: #cffafe;
@@ -47,7 +48,20 @@
   padding-right: 16px;
   margin-top: 50px;
 }
-
+@media screen and (max-width: 768px) {
+  .moneyDetailsContainer2 {
+    flex-direction: column;
+  }
+  .balanceContainer {
+    width: 100%;
+  }
+  .IncomeContainer {
+    width: 100%;
+  }
+  .ExpensesContainer {
+    width: 100%;
+  }
+}
 .imageCSS {
   width: 30%;
 }
