--- a/src/components/MoneyManager/index.css
+++ b/src/components/MoneyManager/index.css
@@ -5,12 +5,15 @@
   height: 100vh;
 }
 .contentContainer {
-  width: 60%;
+  width: 70%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   margin: 30px;
+  height: 100vh;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 .WelcomeContainer {
   font-family: 'Roboto';
@@ -23,6 +26,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+
   padding-left: 30px;
   padding-top: 20px;
   padding-bottom: 20px;
@@ -41,10 +45,130 @@
   font-weight: 400;
   margin-top: 35px;
   margin-bottom: 13px;
+  font-weight: 600;
+}
+@media screen and (max-width: 768px) {
+  .heading {
+    font-size: 25px;
+    font-weight: 400;
+  }
+  .WelcomeContainer {
+    align-items: center;
+    padding-left: 0px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+  .para1 {
+    text-align: center;
+  }
 }
 .moneyDetailsContainer {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
+}
+
+.tables {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.leftTable {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  width: 80%;
+}
+.rightTable {
+}
+
+.table-Heading {
+  font-size: 25px;
+  font-family: 'Roboto';
+}
+.leftTableContainer {
+  border: 2px solid #cbd5e1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 40%;
+  margin-top: 50px;
+  border-radius: 20px;
+}
+.rightTableContainer {
+  border: 2px solid #cbd5e1;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 50%;
+  margin-top: 50px;
+  border-radius: 20px;
+  padding-left: 24px;
+  padding-right: 24px;
+}
+.inputcss {
+  border: 1px solid #d7dfe9;
+  height: 40px;
+  width: 100%;
+  font-size: 14px;
+  border-radius: 5px;
+}
+.labelCss {
+  color: #7e858e;
+  font-size: 14px;
+  margin-bottom: 10px;
+  margin-top: 20px;
+  font-family: 'Roboto';
+  font-weight: bold;
+}
+.options {
+  font-size: 17px;
+  font-family: 'Roboto';
+}
+.buttonAdd {
+  background-color: #0b69ff;
+  border-radius: 10px;
+  width: 100px;
+  height: 40px;
+  color: #ffffff;
+  outline: none;
+  border-width: 0px;
+  cursor: pointer;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+.historyCss {
+  font-size: 25px;
+  font-family: 'Roboto';
+}
+.historyContainer {
+  border: 1px solid #cbd5e1;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  align-self: center;
+  width: 100%;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.Hitems {
+  font-size: 12px;
+  width: 30%;
+}
+@media screen and (max-width: 768px) {
+  .leftTableContainer {
+    width: 100%;
+  }
+  .tables {
+    flex-direction: column;
+  }
+  .rightTableContainer {
+    width: 100%;
+  }
 }
