functionalities working with 7 failed test cases

--- a/src/components/MoneyDetails/index.css
+++ b/src/components/MoneyDetails/index.css
@@ -87,3 +87,11 @@
   font-size: 23px;
   margin-top: 20px;
 }
+@media screen and (max-width: 768px) {
+  .balanceText {
+    font-size: 18px;
+  }
+  .amountText {
+    font-size: 19px;
+  }
+}
