--- a/src/components/MoneyManager/index.css
+++ b/src/components/MoneyManager/index.css
@@ -170,6 +170,9 @@
   }
   .rightTableContainer {
     width: 100%;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 20px;
   }
 }
 ul,
