--- a/src/components/MoneyManager/index.css
+++ b/src/components/MoneyManager/index.css
@@ -47,6 +47,17 @@
   margin-bottom: 13px;
   font-weight: 600;
 }
+.transactionContainer {
+  border: 1px solid #cbd5e1;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  align-self: center;
+  width: 100%;
+  padding-left: 10px;
+  padding-right: 10px;
+}
 @media screen and (max-width: 768px) {
   .heading {
     font-size: 25px;
